--- a/Yellowstone/Yellowstone.vcxproj.filters
+++ b/Yellowstone/Yellowstone.vcxproj.filters
@@ -32,5 +32,8 @@
     <ClCompile Include="app.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="yellowstone_pipeline.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
