--- a/Yellowstone/Yellowstone.vcxproj
+++ b/Yellowstone/Yellowstone.vcxproj
@@ -20,11 +20,14 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="app.hpp" />
+    <ClInclude Include="yellowstone_pipeline.hpp" />
     <ClInclude Include="yellowstone_window.hpp" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="app.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="yellowstone_device.cpp" />
+    <ClCompile Include="yellowstone_device.hpp" />
     <ClCompile Include="yellowstone_pipeline.cpp" />
     <ClCompile Include="yellowstone_window.cpp" />
   </ItemGroup>
