--- a/Yellowstone/Yellowstone.vcxproj
+++ b/Yellowstone/Yellowstone.vcxproj
@@ -20,6 +20,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="app.hpp" />
+    <ClInclude Include="yellowstone_model.hpp" />
     <ClInclude Include="yellowstone_swap_chain.hpp" />
     <ClInclude Include="yellowstone_pipeline.hpp" />
     <ClInclude Include="yellowstone_window.hpp" />
@@ -27,6 +28,7 @@
   <ItemGroup>
     <ClCompile Include="app.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="yellowstone_model.cpp" />
     <ClCompile Include="yellowstone_swap_chain.cpp" />
     <ClCompile Include="yellowstone_device.cpp" />
     <ClCompile Include="yellowstone_device.hpp" />
