--- a/Yellowstone/Yellowstone.vcxproj.filters
+++ b/Yellowstone/Yellowstone.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClInclude Include="yellowstone_swap_chain.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="yellowstone_model.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="yellowstone_window.cpp">
@@ -48,6 +51,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="yellowstone_swap_chain.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="yellowstone_model.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
