--- a/Yellowstone/Yellowstone.vcxproj.filters
+++ b/Yellowstone/Yellowstone.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClInclude Include="yellowstone_model.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="yellowstone_game_object.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="yellowstone_window.cpp">
