--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.27)
-project(yellowstone)
+project(vkEngine)
 
 set(CMAKE_CXX_STANDARD 17)
 
@@ -21,28 +21,28 @@ endif()
 file(GLOB_RECURSE PROJECT_SOURCES CONFIGURE_DEPENDS
 	"${CMAKE_SOURCE_DIR}/src/*.cpp"
 )
-add_executable(yellowstone ${PROJECT_SOURCES})
+add_executable(vkEngine ${PROJECT_SOURCES})
 
-add_dependencies(yellowstone compile_shaders)
+add_dependencies(vkEngine compile_shaders)
 
-target_include_directories(yellowstone PRIVATE "${CMAKE_SOURCE_DIR}/src")
+target_include_directories(vkEngine PRIVATE "${CMAKE_SOURCE_DIR}/src")
 
 find_package(Vulkan REQUIRED)
 find_package(glm REQUIRED)
 find_package(glfw3 REQUIRED)
 
 if(TARGET glm::glm)
-	target_link_libraries(yellowstone PRIVATE glm::glm)
+	target_link_libraries(vkEngine PRIVATE glm::glm)
 endif()
 
 if(TARGET glfw)
-	target_link_libraries(yellowstone PRIVATE glfw)
+	target_link_libraries(vkEngine PRIVATE glfw)
 else()
 	if(TARGET GLFW::GLFW)
-		target_link_libraries(yellowstone PRIVATE GLFW::GLFW)
+		target_link_libraries(vkEngine PRIVATE GLFW::GLFW)
 	endif()
 endif()
 
 if(TARGET Vulkan::Vulkan)
-	target_link_libraries(yellowstone PRIVATE Vulkan::Vulkan)
+	target_link_libraries(vkEngine PRIVATE Vulkan::Vulkan)
 endif()
